--- a/css/style-skinny.css
+++ b/css/style-skinny.css
@@ -138,6 +138,7 @@ body {
 	width: 100%;
 	/*height: 275px;*/
 	overflow:auto;
+  bottom:0;
 	top:1375px;
 	background-color: #233237;
 	clear: both;
